feat: complete DOM manipulation lessons

--- a/dom-manipulation/style.css
+++ b/dom-manipulation/style.css
@@ -1,40 +1,72 @@
-body,
-button,
-input {
+:root {
+  --bgColor: rgb(64, 70, 88);
+}
+*:not(body) {
+  border-radius: 6px;
+  margin-block: 0.5rem;
+}
+body {
   background-color: black;
   color: whitesmoke;
-  font-size: 1.5rem;
-  font-family: sans-serif;
+  font-size: 1.25rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+button,
+input {
+  background-color: whitesmoke;
+  color: black;
+  padding-inline: 0.5rem;
+  font-size: 1.25rem;
 }
 div {
-  padding: 0.5rem;
+  padding-block: 0.25rem;
+  padding-inline: 0.5rem;
 }
 p {
-  font-family: monospace;
   margin: 0;
 }
 #output {
-  border: 1px solid whitesmoke;
-  padding: 0 0.5em 0 0.5em;
-  border-radius: 50px;
+  background-color: whitesmoke;
+  color: black;
+  padding-inline: 0.25em;
   margin-left: 1rem;
+  font-family: monospace;
 }
 #textBox {
-  width: 50%;
+  width: 60%;
 }
 #container {
-  background-color: darkslateblue;
+  background-color: var(--bgColor);
 }
 .display {
-  background-color: green;
+  background-color: rgb(0, 147, 101);
   display: flex;
   align-items: center;
 }
 .controls {
-  background-color: firebrick;
+  background-color: rgb(225, 79, 113);
 }
 .controls.interest {
   background-color: gold;
   color: black;
   font-weight: 700;
+}
+#box {
+  background-color: darkturquoise;
+  width: auto;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: end;
+  font-size: medium;
+  color: black;
+  text-align: right;
+}
+#cursor-pos,
+#color-code {
+  font-family: monospace;
+  color: whitesmoke;
+  text-shadow: 0px 0px 10px black, 0px 0px 6px black, 0px 0px 2px black;
 }
